userChrome.css et userContent.css : lien vers le wiki d'Arch.

--- a/userChrome.css
+++ b/userChrome.css
@@ -1,3 +1,7 @@
+/* Cf. https://wiki.archlinux.org/index.php/Firefox/Tweaks#General_user_interface_CSS_settings
+ *
+ * Un redémarrage de Firefox est nécessaire après chaque modification ! */
+
 /* REMOVE MEGABAR START
  * VERSION 1.0.4
  * CODE AT: http://userchrome.wesleybranton.com/megabar
