--- a/userContent.css
+++ b/userContent.css
@@ -47,3 +47,7 @@
 @-moz-document domain(tripadvisor.fr) {
     .ad { display: none !important; }
 }
+
+@-moz-document domain(secouchermoinsbete.fr) {
+    .premium-needed { display: none !important; }
+}
