--- a/userChrome.css
+++ b/userChrome.css
@@ -4,3 +4,38 @@
 
 /* Masquer l'icône des marques-pages à droite de la barre d'adresse */
 #star-button-box { display: none !important; }
+
+/* Forme des onglets et ligne de séparation entre onglets
+ * Cf. https://github.com/black7375/Firefox-UI-Fix */
+@media (-moz-proton) {
+    /* Tab Bar - Connect to window */
+    .tab-background {
+        border-radius: var(--tab-border-radius) var(--tab-border-radius) 0px 0px !important;
+        margin-bottom: 0px !important;
+    }
+    .tab-content { margin-top: var(--proton-tab-block-margin); }
+    .tab-stack {
+        margin-top: 0px !important;
+        margin-bottom: 0px !important;
+    }
+
+    /* Unselected Tab - Divide line */
+    #tabbrowser-arrowscrollbox:not([overflowing]) .tabbrowser-tab[first-visible-unpinned-tab] .tab-background::before, .tabbrowser-tab:not([visuallyselected], [multiselected], :hover, :first-child) .tab-background::before, #tabbrowser-arrowscrollbox:not([overflowing]) .tabbrowser-tab:not([visuallyselected], [multiselected], :hover)[last-visible-tab] .tab-background::after {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 50%;
+        width: 1px;
+        height: 20px;
+        overflow: hidden;
+        opacity: var(--tab-separator-opacity);
+        transition: opacity .2s var(--ease-basic) !important;
+        background-color: color-mix(in srgb, currentColor 20%, transparent) !important;
+    }
+    .tab-background::before { transform: translateX(-2.5px) translateY(calc(-50% + 1px)) !important; }
+    .tabbrowser-tab[last-visible-tab] .tab-background::after {
+        right: 0;
+        transform: translateX(.5px) translateY(calc(-50% + 1px)) !important;
+    }
+    .tabbrowser-tab:is([visuallyselected], [multiselected], :hover) + .tabbrowser-tab:not([visuallyselected]) .tab-background::before, .tabbrowser-tab[first-visible-unpinned-tab]:is([visuallyselected], [multiselected], :hover) .tab-background::before, #tabbrowser-arrowscrollbox[overflowing] tab.tabbrowser-tab[first-visible-unpinned-tab] .tab-background::before { opacity: 0 !important; }
+}
