--- a/userChrome.css
+++ b/userChrome.css
@@ -5,6 +5,9 @@
 /* Masquer l'icône des marques-pages à droite de la barre d'adresse */
 #star-button-box { display: none !important; }
 
+/* Décaler la barre d'onglets vers la droite */
+#tabbrowser-tabs { margin-left: 10px; }
+
 /* Forme des onglets et ligne de séparation entre onglets
  * Cf. https://github.com/black7375/Firefox-UI-Fix */
 @media (-moz-proton) {
@@ -18,7 +21,6 @@
         margin-top: 0px !important;
         margin-bottom: 0px !important;
     }
-
     /* Unselected Tab - Divide line */
     #tabbrowser-arrowscrollbox:not([overflowing]) .tabbrowser-tab[first-visible-unpinned-tab] .tab-background::before, .tabbrowser-tab:not([visuallyselected], [multiselected], :hover, :first-child) .tab-background::before, #tabbrowser-arrowscrollbox:not([overflowing]) .tabbrowser-tab:not([visuallyselected], [multiselected], :hover)[last-visible-tab] .tab-background::after {
         content: "";
