--- a/userChrome.css
+++ b/userChrome.css
@@ -8,7 +8,8 @@
 /* Décaler la barre d'onglets vers la droite */
 #tabbrowser-tabs { margin-left: 10px; }
 
-/* Désactiver l'expansion de la taille de la barre d'adresse */
+/* Désactiver l'expansion de la taille de la barre d'adresse
+ * Cf. https://github.com/WesleyBranton/Remove-Firefox-Megabar */
 #urlbar[breakout][breakout-extend] {
     top: calc((var(--urlbar-toolbar-height) - var(--urlbar-height)) / 2) !important;
     left: 0 !important;
