--- a/userChrome.css
+++ b/userChrome.css
@@ -78,7 +78,7 @@
     height: unset !important;
     max-height: calc(30.5px * 7.5) !important; /* Nombre de lignes à afficher */
     overflow-y: auto !important;
-    padding-right: 8px !important;
+    padding-right: 4px !important;
 }
 .urlbarView-body-outer {
     padding-bottom: 1px !important;
@@ -107,3 +107,6 @@
 
 /* Masquer la favicon pour les nouveaux onglets */
 .tabbrowser-tab[label="New Tab"]:not([pinned]) .tab-icon-image { display: none !important; }
+
+/* Éclaircir le texte par défaut de la barre d'adresse */
+#urlbar-input::placeholder { color: #555 !important; }
