--- a/userChrome.css
+++ b/userChrome.css
@@ -37,6 +37,13 @@
     padding-bottom: 0 !important;
 }
 
+/* Réduire la taille du bouton "Open a new tab" en conséquence */
+#tabs-newtab-button .toolbarbutton-icon {
+    height: 32px !important;
+    width: 32px !important;
+    padding: 8px !important;
+}
+
 /* Rétablir la ligne de séparation entre onglets
  * Cf. https://github.com/black7375/Firefox-UI-Fix */
 #tabbrowser-arrowscrollbox:not([overflowing]) .tabbrowser-tab[first-visible-unpinned-tab] .tab-background::before, .tabbrowser-tab:not([visuallyselected], [multiselected], :hover, :first-child) .tab-background::before, #tabbrowser-arrowscrollbox:not([overflowing]) .tabbrowser-tab:not([visuallyselected], [multiselected], :hover)[last-visible-tab] .tab-background::after {
