--- a/userChrome.css
+++ b/userChrome.css
@@ -22,7 +22,7 @@
 menupopup, .menupopup-arrowscrollbox { border-radius: 4px !important; }
 
 /* Rétablir la forme des onglets
- * Cf. https://github.com/black7375/Firefox-UI-Fix */
+ * Cf. https://github.com/black7375/Firefox-UI-Fix/blob/master/userChrome.css */
 .tab-background {
     border-radius: var(--tab-border-radius) var(--tab-border-radius) 0 0 !important;
     margin-bottom: 0 !important;
@@ -52,25 +52,32 @@ menupopup, .menupopup-arrowscrollbox { border-radius: 4px !important; }
 }
 
 /* Rétablir la ligne de séparation entre onglets
- * Cf. https://github.com/black7375/Firefox-UI-Fix */
-#tabbrowser-arrowscrollbox:not([overflowing]) .tabbrowser-tab[first-visible-unpinned-tab] .tab-background::before, .tabbrowser-tab:not([visuallyselected], [multiselected], :hover, :first-child) .tab-background::before, #tabbrowser-arrowscrollbox:not([overflowing]) .tabbrowser-tab:not([visuallyselected], [multiselected], :hover)[last-visible-tab] .tab-background::after {
+ * Cf. https://github.com/black7375/Firefox-UI-Fix/blob/master/userChrome.css */
+#tabbrowser-arrowscrollbox { position: absolute; }
+.tabbrowser-tab:not([visuallyselected], [multiselected], :hover, :first-child) .tab-background::before, #tabs-newtab-button:not(:hover, [open])::before {
     content: "";
     display: block;
     position: absolute;
     top: 50%;
+    transform: translateX(-2.5px) translateY(calc(-50% + 1px));
     width: 1px;
     height: 20px;
-    overflow: hidden;
     opacity: var(--tab-separator-opacity);
-    transition: opacity .2s var(--ease-basic) !important;
-    background-color: color-mix(in srgb, currentColor 20%, transparent) !important;
+    transition: opacity .2s var(--ease-basic);
+    background-color: color-mix(in srgb, currentColor 30%, transparent);
 }
-.tab-background::before { transform: translateX(-2.5px) translateY(calc(-50% + 1px)) !important; }
-.tabbrowser-tab[last-visible-tab] .tab-background::after {
-    right: 0;
-    transform: translateX(.5px) translateY(calc(-50% + 1px)) !important;
+#tabs-newtab-button:is(:hover, [open])::before {
+    content: "";
+    position: absolute;
 }
-.tabbrowser-tab:is([visuallyselected], [multiselected], :hover) + .tabbrowser-tab:not([visuallyselected]) .tab-background::before, .tabbrowser-tab[first-visible-unpinned-tab]:is([visuallyselected], [multiselected], :hover) .tab-background::before, #tabbrowser-arrowscrollbox[overflowing] tab.tabbrowser-tab[first-visible-unpinned-tab] .tab-background::before { opacity: 0 !important; }
+#navigator-toolbox:not([movingtab]) > #titlebar > #TabsToolbar .tabbrowser-tab:is([visuallyselected], [multiselected], :hover) + .tabbrowser-tab .tab-background::before,
+#navigator-toolbox:not([movingtab]) > #titlebar > #TabsToolbar .tabbrowser-tab:is([visuallyselected], [multiselected], :hover) ~ .tabbrowser-tab[afterhovered] .tab-background::before,
+#navigator-toolbox:not([movingtab]) > #titlebar > #TabsToolbar .tabbrowser-tab[last-visible-tab]:is([visuallyselected], [multiselected], :hover) ~ #tabs-newtab-button::before,
+#navigator-toolbox:not([movingtab]) > #titlebar > #TabsToolbar .tabbrowser-tab[first-visible-unpinned-tab]:is([visuallyselected], [multiselected], :hover) .tab-background::before,
+#navigator-toolbox:not([movingtab]) > #titlebar > #TabsToolbar #tabbrowser-arrowscrollbox[overflowing] tab.tabbrowser-tab[first-visible-unpinned-tab] .tab-background::before {
+    opacity: 0 !important;
+}
+#tabbrowser-arrowscrollbox:not([overflowing]) .tabbrowser-tab[last-visible-tab] { margin-inline-end: 1px !important; }
 
 /* Désactiver l'expansion de la taille de la barre d'adresse
  * Cf. https://www.userchrome.org/megabar-styling-firefox-address-bar.html */
